# morse-tools

./: README.md  pyproject.toml  requirements.txt  setup.py
morse_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wav2morse/: __init__.py  wav2morse.py
wav2morse.egg-info/: PKG-INFO  SOURCES.txt
